--- a/index.html
+++ b/index.html
@@ -22554,7 +22554,7 @@
                 </div>
 
                 <div id="introduction" class="section level1">
-                    <h1><span class="header-section-number">5</span> General Bioinformatics Resources</h1>
+                    <h1><span class="header-section-number">5</span>Resources</h1>
                     <p> Helpful resources for microbial genomics Omictools Bioinformatics One-liners by Stephen Turner QC Fail: Explaining your errors Short read processing FastQC Trimmomatic: Home Manual bwa bowtie samtools vcftools bcftools gatk picard
                         SPANDx Snippy Genome assembly Spades Velvet Mira A5 Genome alignment Mauve MUMmer Mugsy Visualization of genomic data Artemis Artemis Comparison Tool IGV Genome annotation Prokka Blastall LS-BSR Phylogenetic tools and resources
                         Visualization Seaview iTOL Figtree Phylogenetic software PAUP RaxML PhyML BEAST PHYLIP APE Microreact Recombination detection Gubbins ClonalFrame List of Phylogeny Programs Databases ARDB PATRIC Video Resources you should watch
