--- a/index.html
+++ b/index.html
@@ -22555,11 +22555,9 @@
 
                 <div id="introduction" class="section level1">
                     <h1><span class="header-section-number">5</span>Resources</h1>
-                    <p> Helpful resources for microbial genomics Omictools Bioinformatics One-liners by Stephen Turner QC Fail: Explaining your errors Short read processing FastQC Trimmomatic: Home Manual bwa bowtie samtools vcftools bcftools gatk picard
-                        SPANDx Snippy Genome assembly Spades Velvet Mira A5 Genome alignment Mauve MUMmer Mugsy Visualization of genomic data Artemis Artemis Comparison Tool IGV Genome annotation Prokka Blastall LS-BSR Phylogenetic tools and resources
-                        Visualization Seaview iTOL Figtree Phylogenetic software PAUP RaxML PhyML BEAST PHYLIP APE Microreact Recombination detection Gubbins ClonalFrame List of Phylogeny Programs Databases ARDB PATRIC Video Resources you should watch
-                        and follow FastQC NHGRI Broad Institute Cold Spring Harbor Lab NCBI Bioinformatics courses from MIT Youtube Channel of Rafael Irizarry covering various topics on NGS analysis and statistics involved in it. 101 Questions: a series
-                        of interviews with notable bioinformaticians Bioinformatics is just like bench science and should be treated as such Unix/Command line command-line bootcamp Code academy</p>
+                    <ul>
+                        <li><a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/tree/master/Resources" target="_blank">各种软件</a></li>
+                    </ul>
                 </div>
 
 
