--- a/index.html
+++ b/index.html
@@ -22331,7 +22331,7 @@
                     </p>
                     <p style="text-indent:2em">感谢大家来到本次 <i>细菌基因组可视化绘图技能</i> 分享课堂，本次课堂意在分享经验以及加速各位老师们在基因组数据数据与挖掘时的可视化需要的技能学习。那么在接下来的一段时间，我会先介绍基因组及比较基因组分析中常见的可视化方法,然后挑取 几个重要的软件进行实操。
                     </p>
-                    <p style="text-inde首nt:2em">先，我们需要下载一些软件和数据： </p>
+                    <p style="text-indent:2em">首先，我们需要下载一些软件和数据： </p>
                     <a href="https://github.com/Fanjaro/Genomics-Vis-Workshop" target="_blank">
                         <p><strong><i>https://github.com/Fanjaro/Genomics-Vis-Workshop</i></strong>
                     </a>
@@ -22342,13 +22342,13 @@
                 <div id="introduction" class="section level1">
                     <br>
                     <h1><span class="header-section-number"></span> <strong>概论</strong></h1>
-                    <p style="text-inde首nt:2em">
+                    <p style="text-indent:2em">
                         <a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/blob/master/2021_03_lecture_slides_01.pdf" target="_blank"> <strong>内容总览</strong></a>
                     </p>
                     <h3>温故知新</h3>
 
                     <h4>
-                        <p style="text-inde首nt:2em">① 基因组怎么分析?</p>
+                        <p>① 基因组怎么分析?</p>
                         <ul>
                             <li><a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/tree/master/Overview/01_WGS" target="_blank">WGS</a></li>
                             <li>
@@ -22357,13 +22357,13 @@
                         </ul>
                     </h4>
                     <h4>
-                        <p style="text-inde首nt:2em">② 可视化什么?</p>
+                        <p>② 可视化什么?</p>
                         <ul>
                             <li><a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/blob/master/2021_03_lecture_slides_02.pdf" target="_blank">基因组结构与生物学注释</a></li>
                         </ul>
                     </h4>
                     <h4>
-                        <p style="text-inde首nt:2em">③ 比较什么?</p>
+                        <p>③ 比较什么?</p>
                         <ul>
                             <li><a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/blob/master/2021_03_lecture_slides_03.pdf" target="_blank">结构关系</a></li>
                             <li><a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/blob/master/2021_03_lecture_slides_04.pdf" target="_blank">进化关系</a></li>
@@ -22389,7 +22389,7 @@
                     <br>
 
 
-                    <h2 style="text-indent:2em"> <span class="header-section-number">1.1</span>Artemis</h2>
+                    <h2> <span class="header-section-number">1.1</span>Artemis</h2>
                     <p style="text-indent:2em">
                         Artemis是由Sanger开发的基因组浏览和比较基因组分析的工具能够打开和编辑基因组文件。画基因组圈图，还能查看二代测序数据的Map结果。:
                         <a href="https://github.com/sanger-pathogens/Artemis" target="_blank">
@@ -22408,7 +22408,7 @@
                     <hr>
                     <br>
 
-                    <h2 style="text-indent:2em"> <span class="header-section-number">1.2</span>CGView</h2>
+                    <h2> <span class="header-section-number">1.2</span>CGView</h2>
                     <p style="text-indent:2em">
                         CGVIEW是基于java的快速绘制微生物基因组和质粒圈图软件：GC含量，GC skew- ，GC skew+ 计算；ORF，起始密码子，终止密码子等的检测。官方也提供了在线服务的网站地址:
                         <a href="https://paulstothard.github.io/cgview/" target="_blank">
@@ -22450,7 +22450,7 @@
                     <hr>
                     <br>
 
-                    <h2 style="text-indent:2em"> <span class="header-section-number">1.3</span>Circos</h2>
+                    <h2> <span class="header-section-number">1.3</span>Circos</h2>
                     <p style="text-indent:2em">
                         CGVIEW是基于java的快速绘制微生物基因组和质粒圈图软件：GC含量，GC skew- ，GC skew+ 计算；ORF，起始密码子，终止密码子等的检测。官方也提供了在线服务的网站地址:
                         <a href="https://paulstothard.github.io/cgview/" target="_blank">
@@ -22470,14 +22470,14 @@
                     </ul>
                     <br>
 
-                    <h2 style="text-indent:2em"> <span class="header-section-number">2.1</span>ACT</h2>
+                    <h2> <span class="header-section-number">2.1</span>ACT</h2>
                     <p style="text-indent:2em">
                         Artemis Comparison Tool (ACT) 是一个显示两个或多个DNA序列之间成对比较的工具。它可以用于识别和分析基因组之间的相似和差异区域，并在整个序列及其注释的背景下探索同线性的保守性。
                     </p>
                     <p style="text-indent:2em"><strong>输入文件：</strong></p>
 
 
-                    <h2 style="text-indent:2em"> <span class="header-section-number">2.2</span>Mauve</h2>
+                    <h2> <span class="header-section-number">2.2</span>Mauve</h2>
                     <p style="text-indent:2em">
                         Mauve软件可用于构建多个基因组比对中存在的大规模进化事件，如重排和倒位。多基因组比对结果可为比较基因组学和全基因组进化动力学研究提供了基础。
                         <a href="https://paulstothard.github.io/cgview/" target="_blank">
@@ -22485,7 +22485,7 @@
                     </p>
                     <p style="text-indent:2em"><strong>输入文件：</strong></p>
 
-                    <h2 style="text-indent:2em"> <span class="header-section-number">2.3</span>MCscan</h2>
+                    <h2> <span class="header-section-number">2.3</span>MCscan</h2>
                     <p style="text-indent:2em">
                         Mauve软件可用于构建多个基因组比对中存在的大规模进化事件，如重排和倒位。多基因组比对结果可为比较基因组学和全基因组进化动力学研究提供了基础。
                         <a href="https://paulstothard.github.io/cgview/" target="_blank">
@@ -22495,7 +22495,7 @@
 
 
 
-                    <h2 style="text-indent:2em"> <span class="header-section-number">2.4</span>BRIG</h2>
+                    <h2> <span class="header-section-number">2.4</span>BRIG</h2>
                     <p style="text-indent:2em">
                         Mauve软件可用于构建多个基因组比对中存在的大规模进化事件，如重排和倒位。多基因组比对结果可为比较基因组学和全基因组进化动力学研究提供了基础。
                         <a href="https://paulstothard.github.io/cgview/" target="_blank">
@@ -22503,7 +22503,7 @@
                     </p>
                     <p style="text-indent:2em"><strong>输入文件：</strong></p>
 
-                    <h2 style="text-indent:2em"> <span class="header-section-number">2.5</span>genoPlotR</h2>
+                    <h2> <span class="header-section-number">2.5</span>genoPlotR</h2>
                     <p style="text-indent:2em">
                         Mauve软件可用于构建多个基因组比对中存在的大规模进化事件，如重排和倒位。多基因组比对结果可为比较基因组学和全基因组进化动力学研究提供了基础。
                         <a href="https://paulstothard.github.io/cgview/" target="_blank">
@@ -22516,14 +22516,14 @@
 
                 <div id="introduction" class="section level1">
                     <h1><span class="header-section-number">3</span> Orthologues<i> </i></h1>
-                    <h2 style="text-indent:2em"> <span class="header-section-number">3.1</span>OrthoFinder</h2>
+                    <h2> <span class="header-section-number">3.1</span>OrthoFinder</h2>
                     <p style="text-indent:2em">
                         Mauve软件可用于构建多个基因组比对中存在的大规模进化事件，如重排和倒位。多基因组比对结果可为比较基因组学和全基因组进化动力学研究提供了基础。
                         <a href="https://paulstothard.github.io/cgview/" target="_blank">
                             <strong>https://paulstothard.github.io/cgview/</strong></a>
                     </p>
 
-                    <h2 style="text-indent:2em"> <span class="header-section-number">3.2</span>Roary</h2>
+                    <h2> <span class="header-section-number">3.2</span>Roary</h2>
                     <p style="text-indent:2em">
                         Mauve软件可用于构建多个基因组比对中存在的大规模进化事件，如重排和倒位。多基因组比对结果可为比较基因组学和全基因组进化动力学研究提供了基础。
                         <a href="https://paulstothard.github.io/cgview/" target="_blank">
@@ -22535,14 +22535,14 @@
 
                 <div id="introduction" class="section level1">
                     <h1><span class="header-section-number">4</span> Phylogenetic</h1>
-                    <h2 style="text-indent:2em"> <span class="header-section-number">4.1</span>ggtree</h2>
+                    <h2> <span class="header-section-number">4.1</span>ggtree</h2>
                     <p style="text-indent:2em">
                         Mauve软件可用于构建多个基因组比对中存在的大规模进化事件，如重排和倒位。多基因组比对结果可为比较基因组学和全基因组进化动力学研究提供了基础。
                         <a href="https://paulstothard.github.io/cgview/" target="_blank">
                             <strong>https://paulstothard.github.io/cgview/</strong></a>
                     </p>
 
-                    <h2 style="text-indent:2em"> <span class="header-section-number">4.2</span>iTOL</h2>
+                    <h2> <span class="header-section-number">4.2</span>iTOL</h2>
                     <p style="text-indent:2em">
                         Mauve软件可用于构建多个基因组比对中存在的大规模进化事件，如重排和倒位。多基因组比对结果可为比较基因组学和全基因组进化动力学研究提供了基础。
                         <a href="https://paulstothard.github.io/cgview/" target="_blank">
