--- a/index.html
+++ b/index.html
@@ -22374,7 +22374,7 @@
                 <p>分别从<strong>基因组的可视化</strong>和<strong>比较基因组可视化</strong>两块内容进行实战操作
                 </p>
                 <div id="basic-data-access-and-visualization" class="section level2">
-                    <h1><span class="header-section-number">1</span> 基因组可视化实战</h1>
+                    <h1><span class="header-section-number">1</span> Genomics</h1>
                     <p style="text-indent:2em">
                         基因组可视化，即对基因组数据进行可视化，通常指对最基本的基因组DNA序列，和注释数据等基因组相关的分析数据，按照一定的用户友好方式，使用图形元素表达出来，方便视角直观地识别已知或未知的数据模式，或者比较差异等。
                     </p>
@@ -22387,7 +22387,7 @@
                         <li><a href="https://ncbiinsights.ncbi.nlm.nih.gov/tag/genome-workbench/" target="_blank"> NCBI Genome Workbench</a></li>
                     </ul>
                     <br>
-
+                    <hr>
 
                     <h2> <span class="header-section-number">1.1</span>Artemis</h2>
                     <p style="text-indent:2em">
@@ -22459,7 +22459,7 @@
 
                 </div>
                 <div id="basic-data-access-and-visualization" class="section level2">
-                    <h1><span class="header-section-number">2</span> 比较基因组可视化实战</h1>
+                    <h1><span class="header-section-number">2</span> Comparative Genomics</h1>
                     <p style="text-indent:2em">比较基因组学(Comparative Genomics)是基于基因组图谱和测序基础上，对已知的基因和基因组结构进行比较，来了解基因的功能、表达机理和物种进化的学科。利用模式生物基因组与人类基因组之间编码顺序上和结构上的同源性，克隆人类疾病基因，揭示基因功能和疾病分子机制， 阐明物种进化关系，及基因组的内在结构。
                     </p>
                     <h3 style="text-indent:2em">快速入门：</h3>
