--- a/index.html
+++ b/index.html
@@ -22347,27 +22347,21 @@
                     </p>
                     <h4>
                         <p>① 基因组怎么分析?</p>
-                        <ul>
-                            <li><a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/tree/master/Overview/01_WGS" target="_blank">WGS</a></li>
-                            <br>
-                            <li>
-                                <a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/tree/master/Overview/02_Denovo" target="_blank"> <i>De novo</i></a>
-                            </li>
-                        </ul>
+                        <li style="text-indent:2em"><a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/tree/master/Overview/01_WGS" target="_blank">WGS</a></li>
+                        <br>
+                        <li style="text-indent:2em">
+                            <a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/tree/master/Overview/02_Denovo" target="_blank"> <i>De novo</i></a>
+                        </li>
                     </h4>
                     <h4>
                         <p>② 可视化什么?</p>
-                        <ul>
-                            <li><a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/blob/master/2021_03_lecture_slides_02.pdf" target="_blank">基因组结构与生物学注释</a></li>
-                        </ul>
+                        <li style="text-indent:2em"><a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/blob/master/2021_03_lecture_slides_02.pdf" target="_blank">基因组结构与生物学注释</a></li>
                     </h4>
                     <h4>
                         <p>③ 比较什么?</p>
-                        <ul>
-                            <li><a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/blob/master/2021_03_lecture_slides_03.pdf" target="_blank">结构关系</a></li>
-                            <br>
-                            <li><a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/blob/master/2021_03_lecture_slides_04.pdf" target="_blank">进化关系</a></li>
-                        </ul>
+                        <li style="text-indent:2em"><a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/blob/master/2021_03_lecture_slides_03.pdf" target="_blank">结构关系</a></li>
+                        <br>
+                        <li style="text-indent:2em"><a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/blob/master/2021_03_lecture_slides_04.pdf" target="_blank">进化关系</a></li>
                     </h4>
                     <br>
                 </div>
@@ -22391,18 +22385,18 @@
 
                     <h2> <span class="header-section-number">1.1</span>Artemis</h2>
                     <p style="text-indent:2em">
-                        Artemis是由Sanger开发的基因组浏览和比较基因组分析的工具能够打开和编辑基因组文件。画基因组圈图，还能查看二代测序数据的Map结果。:
+                        Artemis是由Sanger开发的基因组浏览和比较基因组分析的工具能够打开和编辑基因组文件。画基因组圈图，还能查看二代测序数据的Map结果。地址:
                         <a href="https://github.com/sanger-pathogens/Artemis" target="_blank">
                             <strong>https://github.com/sanger-pathogens/Artemis</strong></a>
                     </p>
-                    <p style="text-indent:2em"><strong>输入文件：</strong></p>
-
-                    <ul>
-                        <li>基因组文件：为细菌的基因组序列（fasta格式，或者gbk格式）</li>
-                    </ul>
 
                     <a href="./Part_1/artemis/artemis_orf4.png" target="_blank"> <img src="./Part_1/artemis/artemis_orf4.png" /> </a>
-                    <a href="./Part_1/artemis/artemis_orf4.png" target="_blank">
+
+                    <a href="https://sanger-pathogens.github.io/Artemis/Artemis/artemis-manual.html" target="_blank">
+                        <p style="text-indent:2em"><strong>官方文档</strong></p>
+                    </a>
+
+                    <a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/tree/master/Part_1/artemis" target="_blank">
                         <p style="text-indent:2em"><strong>教程</strong></p>
                     </a>
                     <hr>
