--- a/index.html
+++ b/index.html
@@ -22390,7 +22390,7 @@
                             <strong>https://github.com/sanger-pathogens/Artemis</strong></a>
                     </p>
 
-                    <a href="./Part_1/artemis/artemis_orf4.png" target="_blank"> <img src="./Part_1/artemis/artemis_orf4.png" /> </a>
+                    <a href="./Part_1/artemis/img/artemis_orf4.png" target="_blank"> <img src="./Part_1/artemis/img/artemis_orf4.png" /> </a>
 
                     <a href="https://sanger-pathogens.github.io/Artemis/Artemis/artemis-manual.html" target="_blank">
                         <p style="text-indent:2em"><strong>官方文档</strong></p>
@@ -22404,7 +22404,8 @@
 
                     <h2> <span class="header-section-number">1.2</span>CGView</h2>
                     <p style="text-indent:2em">
-                        CGVIEW是基于java的快速绘制微生物基因组和质粒圈图软件：GC含量，GC skew- ，GC skew+ 计算；ORF，起始密码子，终止密码子等的检测。官方也提供了在线服务的网站地址:
+                        CGView是一种画图工具，生成展示序列特性、基本组成片段、分析相似片段的圆形基因图解图，需要提供的序列为raw、FASTA、GenBank和EMBL格式， 另增加特性或者分析信息请在提交的GFF文件中添加相关信息。此服务使用blast比对相似序列从而建立三组比较基因组或者基因组序列套件。 blast比对结果和特性信息转换到展示整个序列或者扩展更多细节的趣味片段区域的基因图解图中。 特性的展示和怎么来绘制可以通过一些选项来控制。该服务显示与细菌、质粒、叶绿体、线粒体基因组有关的特性，帮助鉴定基因组储存段、举证基因水平转运和找出基因复制数量不同的图谱。由于收集的序列可被也在比较基因组，图谱可被用在读取新获取的序列被已知基因组覆盖的可视区域
+                        。官方也提供了在线服务的网站地址:
                         <a href="https://paulstothard.github.io/cgview/" target="_blank">
                             <strong>https://paulstothard.github.io/cgview/</strong></a>
                     </p>
