--- a/index.html
+++ b/index.html
@@ -22452,9 +22452,14 @@
                             <strong>http://www.circos.ca/</strong></a>
                     </p>
                     <a href="./Part_1/Circos.PNG" target="_blank"> <img src="./Part_1/Circos.PNG" /> </a>
-                    <a href="./Part_1/artemis/artemis_orf4.png" target="_blank">
+                    <a href="./Part_1/Circos/Circos配置文件.pdf" target="_blank">
+                        <p style="text-indent:2em"><strong>配置文件说明</strong></p>
+                    </a>
+
+                    <a href="./Part_1/Circos/Circos-中文教程.pdf" target="_blank">
                         <p style="text-indent:2em"><strong>教程</strong></p>
                     </a>
+
                     <hr>
                     <br>
 
