--- a/index.html
+++ b/index.html
@@ -22438,7 +22438,7 @@
                     </ul>
 
                     <a href="./Part_1/CGVIEW.jpg" target="_blank"> <img src="./Part_1/CGVIEW.jpg" /> </a>
-                    <a href="./Part_1/artemis/artemis_orf4.png" target="_blank">
+                    <a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/tree/master/Part_1/GCView" target="_blank">
                         <p style="text-indent:2em"><strong>教程</strong></p>
                     </a>
 
