--- a/index.html
+++ b/index.html
@@ -22498,7 +22498,7 @@
                             <strong>http://mummer.sourceforge.net/</strong></a>
                     </p>
                     <a href="./Part_1/Mummer.gif" target="_blank"> <img src="./Part_1/Mummer.gif" /> </a>
-                    <a href="./Part_1/artemis/artemis_orf4.png" target="_blank">
+                    <a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/tree/master/Part_1/ACT" target="_blank">
                         <p style="text-indent:2em"><strong>教程</strong></p>
                     </a>
                     <hr>
