--- a/index.html
+++ b/index.html
@@ -22483,13 +22483,11 @@
                     </p>
 
                     <a href="./Part_1/ACT.png" target="_blank"> <img src="./Part_1/ACT.png" /> </a>
-                    <a href="./Part_1/artemis/artemis_orf4.png" target="_blank">
+                    <a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/tree/master/Part_1/ACT" target="_blank">
                         <p style="text-indent:2em"><strong>教程</strong></p>
                     </a>
                     <hr>
                     <br>
-
-
 
                     <h2> <span class="header-section-number">2.2</span>Mummer</h2>
                     <p style="text-indent:2em">
@@ -22498,7 +22496,7 @@
                             <strong>http://mummer.sourceforge.net/</strong></a>
                     </p>
                     <a href="./Part_1/Mummer.gif" target="_blank"> <img src="./Part_1/Mummer.gif" /> </a>
-                    <a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/tree/master/Part_1/ACT" target="_blank">
+                    <a href="http://mummer.sourceforge.net/manual/" target="_blank">
                         <p style="text-indent:2em"><strong>教程</strong></p>
                     </a>
                     <hr>
