--- a/index.html
+++ b/index.html
@@ -22510,7 +22510,7 @@
                             <strong>http://mummer.sourceforge.net/</strong></a>
                     </p>
                     <a href="./Part_1/MScan.PNG" target="_blank"> <img src="./Part_1/MScan.PNG" /> </a>
-                    <a href="./Part_1/artemis/artemis_orf4.png" target="_blank">
+                    <a href="https://github.com/tanghaibao/jcvi/wiki/MCscan-(Python-version)" target="_blank">
                         <p style="text-indent:2em"><strong>教程</strong></p>
                     </a>
                     <hr>
@@ -22525,7 +22525,7 @@
                             <strong>http://mummer.sourceforge.net/</strong></a>
                     </p>
                     <a href="./Part_1/Brig.jpg" target="_blank"> <img src="./Part_1/Brig.jpg" /> </a>
-                    <a href="./Part_1/artemis/artemis_orf4.png" target="_blank">
+                    <a href="https://www.plob.org/article/12704.html" target="_blank">
                         <p style="text-indent:2em"><strong>教程</strong></p>
                     </a>
                     <hr>
@@ -22538,7 +22538,7 @@
                             <strong>http://mummer.sourceforge.net/</strong></a>
                     </p>
                     <a href="./Part_1/genPlotR.png" target="_blank"> <img src="./Part_1/genPlotR.png" /> </a>
-                    <a href="./Part_1/artemis/artemis_orf4.png" target="_blank">
+                    <a href="https://www.jianshu.com/p/acc378109170?utm_campaign=hugo" target="_blank">
                         <p style="text-indent:2em"><strong>教程</strong></p>
                     </a>
                     <hr>
@@ -22565,7 +22565,7 @@
                                 <strong>http://mummer.sourceforge.net/</strong></a>
                         </p>
                         <a href="./Part_1/Orthofinder.PNG" target="_blank"> <img src="./Part_1/Orthofinder.PNG" /> </a>
-                        <a href="./Part_1/artemis/artemis_orf4.png" target="_blank">
+                        <a href="https://www.jianshu.com/p/4d29d24883d2" target="_blank">
                             <p style="text-indent:2em"><strong>教程</strong></p>
                         </a>
                         <hr>
@@ -22579,7 +22579,7 @@
                                 <strong>http://mummer.sourceforge.net/</strong></a>
                         </p>
                         <a href="./Part_1/Roary.png" target="_blank"> <img src="./Part_1/Roary.png" /> </a>
-                        <a href="./Part_1/artemis/artemis_orf4.png" target="_blank">
+                        <a href="https://github.com/yikedou/Roary" target="_blank">
                             <p style="text-indent:2em"><strong>教程</strong></p>
                         </a>
                         <hr>
@@ -22606,7 +22606,7 @@
                                 <strong>http://mummer.sourceforge.net/</strong></a>
                         </p>
                         <a href="./Part_1/MAFFT.jpg" target="_blank"> <img src="./Part_1/MAFFT.jpg" /> </a>
-                        <a href="./Part_1/artemis/artemis_orf4.png" target="_blank">
+                        <a href="http://blog.sciencenet.cn/blog-460481-706083.html" target="_blank">
                             <p style="text-indent:2em"><strong>教程</strong></p>
                         </a>
                         <hr>
@@ -22618,7 +22618,7 @@
                                 <strong>http://mummer.sourceforge.net/</strong></a>
                         </p>
                         <a href="./Part_1/iqtree.PNG" target="_blank"> <img src="./Part_1/iqtree.PNG" /> </a>
-                        <a href="./Part_1/artemis/artemis_orf4.png" target="_blank">
+                        <a href="https://www.jianshu.com/p/fa057daadfbc" target="_blank">
                             <p style="text-indent:2em"><strong>教程</strong></p>
                         </a>
                         <hr>
@@ -22632,7 +22632,7 @@
                                 <strong>http://mummer.sourceforge.net/</strong></a>
                         </p>
                         <a href="./Part_1/ggtree.PNG" target="_blank"> <img src="./Part_1/ggtree.PNG" /> </a>
-                        <a href="./Part_1/artemis/artemis_orf4.png" target="_blank">
+                        <a href="https://yulab-smu.top/treedata-book/chapter4.html" target="_blank">
                             <p style="text-indent:2em"><strong>教程</strong></p>
                         </a>
                         <hr>
@@ -22645,7 +22645,7 @@
                                 <strong>http://mummer.sourceforge.net/</strong></a>
                         </p>
                         <a href="./Part_1/iTOL.png" target="_blank"> <img src="./Part_1/iTOL.png" /> </a>
-                        <a href="./Part_1/artemis/artemis_orf4.png" target="_blank">
+                        <a href="https://www.pianshen.com/article/15994828/" target="_blank">
                             <p style="text-indent:2em"><strong>教程</strong></p>
                         </a>
                         <hr>
