--- a/index.html
+++ b/index.html
@@ -22560,7 +22560,7 @@
 
                         <h2> <span class="header-section-number">3.1</span>OrthoFinder2</h2>
                         <p style="text-indent:2em">
-                            MUMmer 是一个快速比对软件，适用于多个基因组完成图或是草图间的比对。
+                            OrthoFinder是比较基因组学中的实用的，运行快速，准确的全面的工具。它的主要功能是，找到了正交群和直系同源物，推断出所有正交群的根基因树，并识别那些基因树中的所有基因重复事件。它还为所分析的物种推断出有根的物种树，并将基因重复事件从基因树比对到物种树的分支中。
                             <a href="http://mummer.sourceforge.net/" target="_blank">
                                 <strong>http://mummer.sourceforge.net/</strong></a>
                         </p>
@@ -22574,7 +22574,7 @@
 
                         <h2> <span class="header-section-number">3.2</span>Roary</h2>
                         <p style="text-indent:2em">
-                            MUMmer 是一个快速比对软件，适用于多个基因组完成图或是草图间的比对。
+                            Roary是一款由The Wellcome Trust SangerInstitute主导开发的，可以快速地对大规模原核生物基因组进行泛基因组分析的软件。其优点在于可以在短时间内对数千规模的微生物基因组进行泛基因组分析。
                             <a href="http://mummer.sourceforge.net/" target="_blank">
                                 <strong>http://mummer.sourceforge.net/</strong></a>
                         </p>
@@ -22601,7 +22601,7 @@
 
                         <h2> <span class="header-section-number">4.1</span>MAFFT</h2>
                         <p style="text-indent:2em">
-                            MUMmer 是一个快速比对软件，适用于多个基因组完成图或是草图间的比对。
+                            MAFFT 一种高速且准确的比对软件。速度：Muscle>MAFFT>ClustalW>T-Coffee；比对准确性：MAFFT>Muscle>T-Coffee>ClustalW。
                             <a href="http://mummer.sourceforge.net/" target="_blank">
                                 <strong>http://mummer.sourceforge.net/</strong></a>
                         </p>
@@ -22611,9 +22611,9 @@
                         </a>
                         <hr>
                         <br>
-                        <h2> <span class="header-section-number">4.2</span>iqtree</h2>
+                        <h2> <span class="header-section-number">4.2</span>iqtree2</h2>
                         <p style="text-indent:2em">
-                            MUMmer 是一个快速比对软件，适用于多个基因组完成图或是草图间的比对。
+                            iqtree2 一种高效准确并能提供多种方法的建树软件。服务器地址：http://iqtree.cibiv.univie.ac.at
                             <a href="http://mummer.sourceforge.net/" target="_blank">
                                 <strong>http://mummer.sourceforge.net/</strong></a>
                         </p>
