--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-    <title>细菌微生物基因组可视化绘图</title>
+    <title>基因组与比较基因组可视化绘图基础</title>
 
     <script>
         /*! jQuery v1.11.3 | (c) 2005, 2015 jQuery Foundation, Inc. | jquery.org/license */ ! function(a, b) {
@@ -22627,7 +22627,7 @@
 
                         <h2> <span class="header-section-number">4.3</span>ggtree</h2>
                         <p style="text-indent:2em">
-                            MUMmer 是一个快速比对软件，适用于多个基因组完成图或是草图间的比对。
+                            ggtree 可用于绘制高度自定义进化树的R包。
                             <a href="http://mummer.sourceforge.net/" target="_blank">
                                 <strong>http://mummer.sourceforge.net/</strong></a>
                         </p>
@@ -22640,7 +22640,7 @@
 
                         <h2> <span class="header-section-number">4.4</span>iTOL</h2>
                         <p style="text-indent:2em">
-                            MUMmer 是一个快速比对软件，适用于多个基因组完成图或是草图间的比对。
+                            iTOL 简单高效构建复杂进化树的网页服务器。
                             <a href="http://mummer.sourceforge.net/" target="_blank">
                                 <strong>http://mummer.sourceforge.net/</strong></a>
                         </p>
