--- a/index.html
+++ b/index.html
@@ -22543,7 +22543,7 @@
                     </a>
                     <hr>
                     <br>
-
+                </div>
 
 
                     <div id="introduction" class="section level1">
