--- a/index.html
+++ b/index.html
@@ -22321,10 +22321,10 @@
 
             <div class="toc-content col-xs-12 col-sm-8 col-md-9">
                 <div class="fluid-row" id="header">
-                    <h1 class="title toc-ignore">基因组与比较基因组可视化绘图基础</h1>
+                    <h1 class="title toc-ignore" style="color:#337AB7">基因组与比较基因组</h1>
                     <p class="author-name">Feng jiarong<span class="affil-mark"> 1</span></p>
                     <p class="author-affiliation"><span class="affil-mark"></span><i></i></p>
-                    <h4 class="date"><i>BGI Genomics Co Ltd, ShenZhen, 2021.03.24</i></h4>
+                    <h4 class="date"><i>BGI Genomics Co Ltd, ShenZhen, 2021.08.27</i></h4>
                     <hr>
                     <p style="text-indent:2em">
                         近年来高通量测序技术的蓬勃发展,使得微生物基因组学与比较基因组学得到了长足的发展。随着全球越来越多的基因组序列被研究者公布，细菌基因组分析与比较基因组分析技术在当下研究中日趋重要， 其中基因组的可视化在分析数据过程起着关键作用，一方面成功的 可视化基因组分析结果能帮助研究者得到和挖掘出有价值的内容，另一方面在文章发表时，一张好的图可谓一图胜千言
@@ -22340,13 +22340,18 @@
 
 
                 <div id="introduction" class="section level1">
-                    <br>
-                    <h1><span class="header-section-number"></span> <strong>概论</strong></h1>
+                <h1><span class="header-section-number"></span> <strong>1. 概论 </strong></h1>
                     <p>
                         <a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/blob/master/2021_03_lecture_slides_01.pdf" target="_blank"> <strong>内容总览</strong></a>
                     </p>
+                    <p>
+                        下面放流程图，讲大致的分析框架，测序技术的原理，测序数据的基本概念，数据格式讲解
+                    </p>
                     <h4>
-                        <p>① 基因组怎么分析?</p>
+                    <h2><span class="header-section-number">1.1</span> 分析流程总览 </h2><hr>
+                    <h2><span class="header-section-number">1.2</span> 测序原理简介 </h2><hr>
+                    <h2><span class="header-section-number">1.3</span> 分析环境 </h2><hr>
+                    <p>基因组分析的两大主流</p>
                         <li style="text-indent:2em"><a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/tree/master/Overview/01_WGS" target="_blank">WGS</a></li>
                         <br>
                         <li style="text-indent:2em">
@@ -22354,7 +22359,7 @@
                         </li>
                     </h4>
                     <h4>
-                        <p>② 可视化什么?</p>
+                        <p>② 分析什么</p>
                         <li style="text-indent:2em"><a href="https://github.com/Fanjaro/Genomics-Vis-Workshop/blob/master/2021_03_lecture_slides_02.pdf" target="_blank">基因组结构与生物学注释</a></li>
                     </h4>
                     <h4>
@@ -22367,8 +22372,41 @@
                 </div>
                 <br>
                 </p>
-                <div id="basic-data-access-and-visualization" class="section level2">
-                    <h1><span class="header-section-number">1</span> Genomics</h1>
+                 <h1><span class="header-section-number"></span><strong>2. 质控 </strong></h1>
+                    <h2><span class="header-section-number">2.1</span> 下机数据解读 </h2><hr>
+
+                    <h2><span class="header-section-number">2.2</span> 下机数据质控 </h2><hr>
+
+                <h1><span class="header-section-number"></span> <strong>3. 组装 </strong> </h1>
+                    <h2><span class="header-section-number">3.1</span> 全基因组调查 </h2><hr>
+                    <h2><span class="header-section-number">3.2</span> 重头组装 </h2><hr>
+                    <h2><span class="header-section-number">3.3</span> 组装结果评估 </h2><hr>
+
+                <h1><span class="header-section-number"></span> <strong>4. 注释 </strong> </h1>
+                    <h2><span class="header-section-number">4.1</span> 基因注释 </h2><hr>
+                    <h2><span class="header-section-number">4.2</span> 功能注释 </h2><hr>
+                    <h2><span class="header-section-number">4.3</span> 物种注释 </h2><hr>
+
+                <h1><span class="header-section-number"></span> <strong>5. 比对 </strong> </h1>
+                    <h2><span class="header-section-number">5.1</span> 全基因组比对 </h2><hr>
+                    <h2><span class="header-section-number">5.2</span> 分析突变 </h2><hr>
+
+                <h1><span class="header-section-number"></span> <strong>6. 进化 </strong> </h1>
+                    <h2><span class="header-section-number">6.1</span> 基因组进化树 </h2><hr>
+                    <h2><span class="header-section-number">6.2</span> SNP进化树 </h2><hr>
+                    <h2><span class="header-section-number">6.3</span> Core-Pan </h2><hr>
+
+                <h1><span class="header-section-number"></span> <strong>7. 可视化专题 </strong> </h1>
+                    <h2><span class="header-section-number">7.1</span> 基因组图谱可视化 </h2><hr>
+
+                    <h2><span class="header-section-number">7.2</span> SNP进化树 </h2><hr>
+
+                <h1><span class="header-section-number"></span> <strong>8. 公共数据库专题 </strong> </h1>
+                    <h2><span class="header-section-number">8.1</span> 序列数据库 </h2><hr>
+                    <h2><span class="header-section-number">8.2</span> 功能注释数据库 </h2><hr>
+                    <h2><span class="header-section-number">8.3</span> 物种注释数据库 </h2><hr>
+
+                <h3> <span class="header-section-number">1.1</span>Genome</h3>
                     <p style="text-indent:2em">
                         基因组可视化，即对基因组数据进行可视化，通常指对最基本的基因组DNA序列，和注释数据等基因组相关的分析数据，按照一定的用户友好方式，使用图形元素表达出来，方便视角直观地识别已知或未知的数据模式，或者比较差异等。
                     </p>
@@ -22663,7 +22701,7 @@
                         </ul>
                     </div>
 
-
+                    <h1><span class="header-section-number"></span> <strong>8. 参考文献 </strong> </h1>
                     <div id="references" class="section level1 unnumbered">
                         <h1>References</h1>
                         <div id="refs" class="references">
