--- a/index.html
+++ b/index.html
@@ -23063,8 +23063,12 @@ perl CRISPRCasFinder.pl [options] -in <filename.fasta>
 
 
                 <hr>
-                <h2><span class="header-section-number">6.2</span> SNP进化树 </h2>
-
+                <h2><span class="header-section-number">6.6</span> snippy </h2>
+                <p style="text-indent:2em">
+                    快速比对基因组得到snp indel
+                    <a href="https://github.com/tseemann/snippy" target="_blank">
+                        <strong>https://github.com/tseemann/snippy</strong></a>
+                </p>
                 <hr>
 
                 <h1><span class="header-section-number"></span> <strong>7. 可视化专题 </strong> </h1>
@@ -23184,6 +23188,17 @@ perl CRISPRCasFinder.pl [options] -in <filename.fasta>
                         <strong>https://github.com/BIONF/PhyloProfile</strong></a>
                 </p>
                 <a href="./pipeline-34.PNG" target="_blank"> <img src="./pipeline-34.PNG" /> </a>
+                </a>
+                <hr>
+                <br>
+
+                <h2> <span class="header-section-number">7.7</span>Fuji plot</h2>
+                <p style="text-indent:2em">
+                    Fuji plot 是一个R软件包，用于生成出版物级的GWAS图谱
+                    <a href="https://github.com/mkanai/fujiplot" target="_blank">
+                        <strong>https://github.com/mkanai/fujiplot</strong></a>
+                </p>
+                <a href="./circos.svg" target="_blank"> <img src="./circos.svg" /> </a>
                 </a>
                 <hr>
                 <br>
