--- a/index.html
+++ b/index.html
@@ -23114,6 +23114,23 @@ perl CRISPRCasFinder.pl [options] -in <filename.fasta>
                 <br>
 
 
+                <h2> <span class="header-section-number">5.7</span>Selection</h2>
+                <a href="./pipeline-60.PNG" target="_blank"> <img src="./pipeline-60.PNG" /> </a>
+                <h3><span class="header-section-number"></span> KaKs_Calculator2.0 </h3>
+                <p style="text-indent:2em">
+                    快速计算 Ka/Ks
+                    <a href="https://sourceforge.net/projects/kakscalculator2/?source=typ_redirect" target="_blank">
+                        <strong>https://sourceforge.net/projects/kakscalculator2/?source=typ_redirect</strong></a>
+                </p>
+                <a href="https://www.jianshu.com/p/1fe69aba760d" target="_blank">
+                    <p style="text-indent:2em"><strong>教程</strong></p>
+                </a>
+
+
+                <hr>
+                <br>
+
+
 
                 <h1><span class="header-section-number"></span> <strong>6. 进化分析 </strong> </h1>
                 <h2> <span class="header-section-number"></span>概论</h2>
