--- a/index.html
+++ b/index.html
@@ -23030,7 +23030,9 @@ perl CRISPRCasFinder.pl [options] -in <filename.fasta>
                 <hr>
 
                 <h2> <span class="header-section-number">5.4</span>Collinearity/Synteny</h2>
-
+                <a href="./pipeline-61.PNG" target="_blank"> <img src="./pipeline-61.PNG" /> </a>
+                <a href="./pipeline-62.PNG" target="_blank"> <img src="./pipeline-62.PNG" /> </a>
+                <br>
                 <h3> <span class="header-section-number"></span>ACT</h3>
                 <p style="text-indent:2em">
                     Artemis Comparison Tool (ACT) 是一个显示两个或多个DNA序列之间成对比较的工具。它可以用于识别和分析基因组之间的相似和差异区域，并在整个序列及其注释的背景下探索同线性的保守性。
@@ -23138,18 +23140,18 @@ perl CRISPRCasFinder.pl [options] -in <filename.fasta>
                 <a href="./pipeline-39.PNG" target="_blank"><img src="./pipeline-39.PNG" target="_blank" alt="简要" /></a>
                 <a href="./pipeline-41.PNG" target="_blank"><img src="./pipeline-41.PNG" target="_blank" alt="简要" /></a>
                 <a href="./pipeline-42.PNG" target="_blank"><img src="./pipeline-42.PNG" target="_blank" alt="简要" /></a>
-
                 <a href="./pipeline-36.PNG" target="_blank"><img src="./pipeline-36.PNG" target="_blank" alt="简要" /></a>
                 <a href="./pipeline-59.PNG" target="_blank"><img src="./pipeline-59.PNG" target="_blank" alt="简要" /></a>
+
                 <h2><span class="header-section-number">6.1</span> 实用工具 </h2>
                 <ul>
-
                     <li><a href="http://www.clustal.org/omega/" target="_blank"> Clustal Omega </a></li>
                     <li><a href="https://github.com/ddarriba/prottest3" target="_blank"> prottest3 </a></li>
                     <li><a href="http://abacus.gene.ucl.ac.uk/software/paml.html" target="_blank"> PAML </a></li>
                     <li><a href="https://github.com/stamatak/standard-RAxML" target="_blank"> RAxML </a></li>
                     <li><a href="http://www.beast2.org/" target="_blank"> beast2 </a></li>
                     <li><a href="http://loco.biosci.arizona.edu/r8s/" target="_blank"> r8s </a></li>
+                    <li><a href="https://github.com/hahnlab/CAFE5" target="_blank"> CAFE5 </a></li>
                     <li><a href="http://www.microbesonline.org/fasttree/#Install" target="_blank"> FastTree </a></li>
                     <li><a href="http://www.timetree.org/" target="_blank"> Time Tree </a></li>
                     <li><a href="http://www.evolgenius.info/evolview.html" target="_blank"> EvolView </a></li>
